--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
@@ -366,7 +366,7 @@ ReinventSoftware\UebusaitoBundle\Entity\Setting:
                 groups: [settings]
                 htmlPattern: false
                 pattern: /^[a-zA-Z_0-9]+$/
-        templateStyle:
+        templateColumn:
             - NotBlank:
                 groups: [settings]
             - Regex:
