--- a/symfony_fw/app/config/security.yml
+++ b/symfony_fw/app/config/security.yml
@@ -19,11 +19,12 @@ security:
         #in_memory:
             #memory: ~
         # cimo +
+        #webservice:
+        #    id: uebusaito.webservice_user_provider
         user_db:
             entity:
                 class: UebusaitoBundle:User
                 #property: username
-
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
