--- a/symfony_fw/app/config/security.yml
+++ b/symfony_fw/app/config/security.yml
@@ -58,3 +58,4 @@ security:
                 target: root_render
                 path: authentication_exit_check
                 success_handler: uebusaito.authentication_listener
+                invalidate_session: false
