Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
@@ -414,7 +414,7 @@ ReinventSoftware\UebusaitoBundle\Entity\RoleUser:
 
 ReinventSoftware\UebusaitoBundle\Entity\Setting:
     properties:
-        templateName:
+        template:
             - NotBlank:
                 groups: [setting]
             - Regex:
