Restyle - Work in progress.

--- a/symfony_fw/config/services.yaml
+++ b/symfony_fw/config/services.yaml
@@ -33,22 +33,22 @@ services:
     # cimo +    
     app.error_listener:
        class: App\EventListener\ErrorListener
-       arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router']
+       arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router', '@request_stack']
        tags:
            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
     
     app.request_listener:
         class: App\EventListener\RequestListener
-        arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router']
+        arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router', '@request_stack']
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
     
     app.authentication_listener:
         class: App\EventListener\AuthenticationListener
-        arguments: ['@service_container', '@doctrine.orm.entity_manager']
+        arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router', '@request_stack']
     
     app.payPal_ipn_listener:
         class: App\EventListener\PayPalIpnListener
-        arguments: ['@service_container', '@doctrine.orm.entity_manager']
+        arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router', '@request_stack']
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
