--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -528,11 +528,13 @@ App\Entity\MicroserviceDeploy:
         name:
             - NotBlank:
                 groups: [microservice_deploy_create, microservice_deploy_profile]
-            - Regex:
-                groups: [microservice_deploy_create, microservice_deploy_profile]
-                htmlPattern: false
-                pattern: /^[a-z_]+$/
         description:
+            - NotBlank:
+                groups: [microservice_deploy_create, microservice_deploy_profile]
+        systemUser:
+            - NotBlank:
+                groups: [microservice_deploy_create, microservice_deploy_profile]
+        ip:
             - NotBlank:
                 groups: [microservice_deploy_create, microservice_deploy_profile]
         gitUserEmail:
@@ -569,13 +571,6 @@ App\Entity\MicroserviceApi:
         name:
             - NotBlank:
                 groups: [microservice_api_create, microservice_api_profile]
-        folderName:
-            - NotBlank:
-                groups: [microservice_api_create, microservice_api_profile]
-            - Regex:
-                groups: [microservice_api_create, microservice_api_profile]
-                htmlPattern: false
-                pattern: /^[a-zA-Z0-9]+$/
         description:
             - NotBlank:
                 groups: [microservice_api_create, microservice_api_profile]
