--- a/symfony_fw/config/packages/framework.yaml
+++ b/symfony_fw/config/packages/framework.yaml
@@ -11,9 +11,10 @@ framework:
         #handler_id: ~
         # cimo +
         handler_id: session.handler.native_file
-        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+        #save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+        save_path: '/var/lib/php/sessions'
         name: uebusaito
-        cookie_domain: .reinventsoftware.org
+        cookie_domain: .machine.local
     
     # cimo +
     assets:
