--- a/symfony_fw/composer.json
+++ b/symfony_fw/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
-        "sensiolabs/security-checker": "^4.1",
+        "sensiolabs/security-checker": "^5.0",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
@@ -14,6 +14,7 @@
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
         "symfony/http-foundation": "^4.1",
+        "symfony/lock": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
