Restyle - Work in progress.

--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -611,7 +611,7 @@ App\Entity\ApiBasic:
             - Regex:
                     groups: [apiBasic_create, apiBasic_profile]
                     htmlPattern: false
-                    pattern: /^[0-9.]+$/
+                    pattern: /^[0-9.,]+$/
         active:
             - NotBlank:
                 groups: [apiBasic_create, apiBasic_profile]
