--- a/symfony_fw/composer.json
+++ b/symfony_fw/composer.json
@@ -23,6 +23,7 @@
         "symfony/security-csrf": "^4.1",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/translation": "^4.1",
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/web-link": "^4.1",
